--- a/style.css
+++ b/style.css
@@ -8,8 +8,88 @@
   font-family: "Work Sans", sans-serif;
 }
 
+/* universal style  */
+* {
+  margin: 0;
+  padding: 0;
+}
+.btn-primary {
+  border-radius: 8px;
+  background: #ff900e;
+  width: 180px;
+  height: 64px;
+  color: #fff;
+  text-align: center;
+
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  border: none;
+}
+
 /* Nav section */
-.nav-container {
+nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+header {
+  background: rgba(255, 144, 14, 0.1);
+  padding: 50px 240px;
+}
+nav > ul {
+  display: flex;
+}
+nav ul > li {
+  font-size: 1rem;
+
+  font-weight: 500;
+  margin-right: 30px;
+}
+nav ul li > a {
+  text-decoration: none;
+  color: #424242;
+}
+.nav-h1 {
+  font-size: 2.7rem;
+  font-weight: 700;
+  color: #131313;
+}
+.banner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.banner-title {
+  color: var(--dark-01, #131313);
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 4rem;
+
+  font-weight: 700;
+  padding-left: 529px;
+  padding-right: 529px;
+  margin-top: 205px;
+  margin-bottom: 20px;
+}
+.banner-description {
+  color: #727272;
+
+  text-align: center;
+
+  font-size: 1rem;
+
+  font-weight: 400;
+  padding-left: 526px;
+  padding-right: 526px;
+  margin-bottom: 20px;
+}
+.banner-img {
+  border-radius: 8px;
+  margin-left: 240px;
+  padding-right: 240px;
+  width: 1440px;
+  height: 700px;
+  margin-top: 20px;
 }
