--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
   font-style: normal;
   font-weight: 600;
   border: none;
+  cursor: pointer;
 }
 
 /* Nav section */
@@ -76,20 +77,22 @@ nav ul li > a {
 .banner-description {
   color: #727272;
 
-  text-align: center;
-
   font-size: 1rem;
 
   font-weight: 400;
-  padding-left: 526px;
-  padding-right: 526px;
+
   margin-bottom: 20px;
 }
 .banner-img {
-  border-radius: 8px;
-  margin-left: 240px;
-  padding-right: 240px;
-  width: 1440px;
-  height: 700px;
+  width: 100%;
   margin-top: 20px;
+}
+/* Responsive styles */
+@media screen and (max-width: 1023px) {
+  nav {
+    flex-direction: column;
+  }
+  header {
+    padding: 20px;
+  }
 }
