--- a/style.css
+++ b/style.css
@@ -87,6 +87,56 @@ nav ul li > a {
   width: 100%;
   margin-top: 20px;
 }
+
+/* Group featres */
+main {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.team-container {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  align-items: center;
+}
+.grid-images {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+}
+.team-content {
+  padding-left: 72px;
+  padding-right: 72px;
+}
+.team-title {
+  font-size: 2.7rem;
+}
+.quick {
+  color: var(--dark-03, #727272);
+  font-family: Work Sans;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.features {
+  color: #ff900e;
+  font-family: Work Sans;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.team-description {
+  color: var(--dark-03, #727272);
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  padding-top: 24px;
+  padding-bottom: 32px;
+}
 /* Responsive styles */
 @media screen and (max-width: 1023px) {
   nav {
