--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ nav ul li > a {
 /* Group featres */
 main {
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 70px auto;
 }
 .team-container {
   display: flex;
@@ -136,6 +136,7 @@ main {
   line-height: 26px;
   padding-top: 24px;
   padding-bottom: 32px;
+  text-align: center;
 }
 /* Responsive styles */
 @media screen and (max-width: 1023px) {
@@ -144,5 +145,12 @@ main {
   }
   header {
     padding: 20px;
+  }
+  .team-container {
+    flex-direction: column;
+    margin: 20px;
+  }
+  .grid-images {
+    display: block;
   }
 }
