--- a/style.css
+++ b/style.css
@@ -142,16 +142,15 @@ main {
   margin-bottom: 24px;
 }
 .box1 {
-  height: 242px;
-  width: 242px;
   background: #fff;
   border: #ff900e solid;
   text-align: center;
-  color: var(--dark-02, #424242);
-  font-family: Work Sans;
-  font-size: 45px;
+  padding: 35px 30px;
+  margin-top: 100px;
 
-  padding-top: 60px;
+  font-size: 2.8rem;
+  border-radius: 8px;
+  border: 1px solid #ff900e;
 }
 .box-description {
   color: var(--dark-03, #727272);
