--- a/style.css
+++ b/style.css
@@ -205,6 +205,85 @@ main {
   margin: 150px 240px;
 }
 
+/* Enjoyable-feautures */
+.features-title {
+  color: var(--dark-01, #131313);
+  font-family: Work Sans;
+  font-size: 45px;
+
+  font-weight: 700;
+  border-left: #ff900e solid;
+  border-width: 5px;
+  padding-left: 24px;
+  margin-bottom: 24px;
+  margin-top: 169px;
+}
+features-description {
+  color: var(--dark-03, #727272);
+  font-family: Work Sans;
+  font-size: 16px;
+
+  font-weight: 400;
+}
+.ejoyable-features {
+  display: flex;
+  justify-content: center;
+  margin-top: 130px;
+}
+.features-div-container {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.features-div {
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+  padding: 30px;
+}
+.features-div-title {
+  color: var(--dark-01, #131313);
+  font-family: Work Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding-top: 30px;
+  padding-left: 30px;
+}
+.features-img {
+  margin-top: 130px;
+  margin-left: 146px;
+}
+
+.image-box {
+  width: 342px;
+  height: 200px;
+  border-radius: 8px;
+  background: #ff900e;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  margin: -90px;
+}
+.image-box-title {
+  color: #fff;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 65px;
+  font-style: normal;
+  font-weight: 700;
+  padding-top: 46px;
+}
+.image-box-description {
+  color: #FFF;
+font-family: Work Sans;
+font-size: 25px;
+f
+font-weight: 500;
+line-height: 40px;
+}
 /* Responsive styles */
 @media screen and (max-width: 1023px) {
   nav {
@@ -239,4 +318,17 @@ main {
   .sponsors-description {
     margin-bottom: 20px;
   }
+
+  .image-box {
+  width: 251px;
+  height: 186px;
+  border-radius: 8px;
+  background: #ff900e;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  margin-top:-60px;
+  margin-left: 10px;
+}
+ 
 }
